<resources>
    <string name="app_name">Patrol Robot</string>
    <!--main页面item-->
    <string name="item_a">配置信息</string>
    <string name="item_b">可见光</string>
    <string name="item_c">开启</string>
    <string name="item_d">开启</string>
    <string name="item_e">开启</string>
    <!--正常 警告 危险-->
    <string name="item_f">正常</string>
    <string name="item_g">85%</string>
    <string name="item_h">35℃</string>
    <string name="item_i">我的设备</string>
    <string name="item_j">连接中断</string>
    <string name="item_k">终端电量</string>
    <string name="item_l">主机电量</string>
    <string name="item_m">关闭</string>
    <string name="item_o">详情</string>
    <string name="item_n">线路</string>
</resources>
