<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_38"
    android:background="@color/bg_color">

    <LinearLayout
        android:id="@+id/llXQ"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivXQ"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:src="@mipmap/tab_xq" />

        <TextView
            android:id="@+id/tvXQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_o"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llXL"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivXL"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:src="@mipmap/tab_xl" />

        <TextView
            android:id="@+id/tvXL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_n"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lli"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:background="@mipmap/tab_wdsb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_i"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lla"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:background="@mipmap/tab_pzxx" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_a"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llb"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivQH"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:background="@mipmap/tab_qh_kjg" />

        <TextView
            android:id="@+id/tvQh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_b"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llc"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLd"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:background="@mipmap/tab_jg_on" />

        <TextView
            android:id="@+id/tvLd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_c"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lld"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivKjg"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:background="@mipmap/tab_kjg_on" />

        <TextView
            android:id="@+id/tvKjg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_d"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivHw"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:background="@mipmap/tab_hw_on" />

        <TextView
            android:id="@+id/tvHw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_e"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <!--<View-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1" />-->

    <LinearLayout
        android:id="@+id/llf"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPh"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:background="@mipmap/tab_ph_zc" />

        <TextView
            android:id="@+id/tvPh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_f"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llg"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:background="@mipmap/tab_su" />

        <TextView
            android:id="@+id/tvSu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_g"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llh"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:background="@mipmap/tab_wd" />

        <TextView
            android:id="@+id/tvWd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_h"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llk"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/image_height">

            <ImageView
                android:id="@+id/ivZD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/tab_dl_sb_a" />

            <TextView
                android:id="@+id/tvZDNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="0%"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_8" />

            <ImageView
                android:id="@+id/ivZDcd"
                android:layout_width="@dimen/dp_12"
                android:layout_height="@dimen/dp_12"
                android:layout_centerInParent="true"
                android:background="@mipmap/ic_cd"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_k"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lll"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/image_height">

            <ImageView
                android:id="@+id/ivZJ"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/tab_dl_a" />

            <TextView
                android:id="@+id/tvZJNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="0%"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_8" />

            <ImageView
                android:id="@+id/ivZJcd"
                android:layout_width="@dimen/dp_12"
                android:layout_height="@dimen/dp_12"
                android:layout_centerInParent="true"
                android:background="@mipmap/ic_cd"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_l"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llj"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivConn"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:src="@mipmap/tab_lj_off"
           />

        <TextView
            android:id="@+id/tvConn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_j"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llm"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ll_clicked"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:background="@mipmap/tab_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/item_m"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>
</LinearLayout>